homework3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpservice-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpservice
  template:
    metadata:
      labels:
        app: httpservice
    spec:
      volumes:
        - name: rook-log-pv-storage
          persistentVolumeClaim:
            claimName: rook-log
        - name: rook-www-pv-storage
          persistentVolumeClaim:
            claimName: rook-www
      containers:
        - name: httpservice
          image: yagamishi/httpserver:v1.3
          volumeMounts:
            - mountPath: "/usr/local/httpservice/logs"
              name: rook-log-pv-storage
            - mountPath: "/usr/local/httpservice/www"
              name: rook-www-pv-storage
          resources:
            limits:
              memory: 2Gi
              cpu: 1
            requests:
              memory: 512Mi
              cpu: 200m
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8887
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
          lifecycle:
            preStop:
              exec:
                command: [ "/bin/sh","-c","ps -ef |grep -w 'httpserver'|grep -v grep | awk '{print $2}' |xargs kill -3;sleep 5000" ]
