homework3/service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpservice-clusterip
  labels:
    app: httpservice-clusterip
spec:
  type: ClusterIP
#  clusterIP: None
  ports:
    - port: 8888
      name: server
      targetPort: 8887
  selector:
    app: httpservice
---
