homework3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - cncamp.com
      secretName: cncamp-tls
  rules:
   # - host: cncamp.com
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpservice-clusterip
                port:
                  number: 8888
